text align and color fix for legend

--- a/layout.css
+++ b/layout.css
@@ -17,9 +17,11 @@ legend {
     font-size: 1.5em;
     font-weight: bold;
     padding: 0 10px;
+    text-align: left;
+    margin-left: 30px;
     text-transform: lowercase;
     background-color: white;
-    border: 1px solid black;
+    border: 1px solid rgb(61, 61, 61);
 }
 
 div {
